@startuml

title __COMMANDS's Class Diagram__\n


namespace commands{
      interface commands.Command {
          {abstract} + description()
          {abstract} + execute()
      }

  


      class commands.ErrorCommand {
          + description()
          + execute()
      }

      class commands.HelpCommand {
          + description()
          + execute()
      }

 namespace tasks{
        class commands.tasks.AddCommand {
            + description()
        }



        class commands.tasks.CheckCommand {
            + description()
        }


        class commands.tasks.DeadlineCommand {
            + description()
        }

        class commands.tasks.RemoveCommand {
            + description()
        }

        class commands.tasks.ShowCommand {
            + description()
        }

        abstract class commands.tasks.TaskCommand {
            + execute()
        }

        class commands.tasks.TodayCommand {
            + description()
        }

        class commands.tasks.UncheckCommand {
            + description()
        }
      }
 }

  commands.tasks.AddCommand -up-|> commands.tasks.TaskCommand

  commands.tasks.CheckCommand -up-|> commands.tasks.TaskCommand
  commands.tasks.DeadlineCommand -up-|> commands.tasks.TaskCommand
  commands.tasks.RemoveCommand -up-|> commands.tasks.TaskCommand
  commands.tasks.ShowCommand -up-|> commands.tasks.TaskCommand
  commands.tasks.TaskCommand .up.|> commands.Command
  commands.tasks.TodayCommand -up-|> commands.tasks.TaskCommand
  commands.tasks.UncheckCommand -up-|> commands.tasks.TaskCommand


  commands.ErrorCommand .up.|> commands.Command
  commands.HelpCommand .up.|> commands.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
